<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mithila   Music  </string>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_lokgeet">Lokgeet</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_holigeet">Holigeet</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_samageet">Samageet</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_chatgeet">Chaatgeet </string>
    <string name="category_moviegeet">Albumgeet</string>
    <string name="category_bhajangeet">Bhajangeet</string>
    <string name="category_vidyapatigeet">Vidyapatigeet</string>

    <string name="category_vivahgeet">Vivahgeet</string>
    <string name="banner_ad_unit_id">ca-app-pub-3459004490451586/8479324353</string>
    <!--Replace with your own ad unit id. -->
    <string name="ad_unit_id">ca-app-pub-3459004490451586/1297147957</string>



</resources>