<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tan_background"
        android:orientation="vertical"
        tools:context="application.android.flora.mithilamusic.MainActivity">

        <TextView
            android:id="@+id/saamageet"
            style="@style/CategoryStyle"
            android:background="@drawable/borderbest"
            android:text="@string/category_samageet"
            android:textAppearance="?android:textAppearanceLarge"
            />
        <TextView
            android:id="@+id/lookgeet"
            style="@style/CategoryStyle"
            android:background="@drawable/borderbest"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/category_lokgeet" />
        <TextView
            android:id="@+id/moviegeet"
            style="@style/CategoryStyle"
            android:background="@drawable/borderbest"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="Albumgeet" />
        <TextView
            android:id="@+id/chaatgeet"
            style="@style/CategoryStyle"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/borderbest"
            android:text="@string/category_chatgeet" />
        <TextView
            android:id="@+id/bhajangeet"
            style="@style/CategoryStyle"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/borderbest"
            android:text="@string/category_bhajangeet" />
        <TextView
            android:id="@+id/vidyapatigeet"
            style="@style/CategoryStyle"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/borderbest"
            android:text="@string/category_vidyapatigeet" />
        <TextView
            android:id="@+id/vivahgeet"
            style="@style/CategoryStyle"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/borderbest"
            android:text="@string/category_vivahgeet" />
        <TextView
            android:id="@+id/holigeet"
            style="@style/CategoryStyle"
            android:textAppearance="?android:textAppearanceLarge"
           android:background="@drawable/borderbest"
            android:text="@string/category_holigeet" />

         <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>
</ScrollView>